Made navbar fixed on smaller screens

--- a/html/assets/css/Flight/magister.css
+++ b/html/assets/css/Flight/magister.css
@@ -1,6 +1,6 @@
 html {
 	background:#505D6E url(../../img/Flight/Flight4.jpg) no-repeat center center fixed; 
-	min-height:100%;
+	min-height:100vh;
 	-webkit-background-size: cover;
 	   -moz-background-size: cover;
 	     -o-background-size: cover;
@@ -78,7 +78,10 @@ body {
 	        transition: all .45s;
 }
 @media (max-width: 768px) {
-	.mainmenu .dropdown-menu { background: black; }
+	.mainmenu .dropdown-menu { background: black;}
+}
+@media (max-width: 768px) {
+	.mainmenu{ position: fixed;}
 }
 .mainmenu .dropdown-menu .active { 
 	font-weight:bold;
